# elkplot

./: .gitignore  404.html  LICENSE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
api_ref/making_art/: index.html
api_ref/plotting/: index.html
api_ref/turtle/: index.html
docs/: alternatives.md  examples.md  index.md  index.rst  requirements.txt  setup.md  tips_and_tricks.md
docs/api_ref/: cli.md  easing.md  making_art.md  plotting.md  text.md  turtle.md
elkplot/: __init__.py  axidraw.ini  calibrate.py  cli.py  device.py  drawing.py  easing.py  hershey.py  hershey_fonts.py  main.py  optimization.py  planner.py  renderer.py  shape_utils.py  sizes.py  spatial.py  svg_load.py  turtle.py  util.py
elkplot/examples/: multi_layer.py  schotter.py  set_theoretic_construction.py
elkplot/text/: font_reference_sheet.py  hershey.py  hershey_fonts.py
examples/: index.html
site/: conf.py  objects.inv
site/alternatives/: index.html
site/api_ref/cli/: index.html
site/api_ref/easing/: index.html
site/api_ref/plotting/: index.html
site/api_ref/text/: index.html
site/api_ref/turtle/: index.html
site/examples/: index.html
site/search/: search_index.json
site/setup/: index.html
site/tips_and_tricks/: index.html
test/: config.py  conftest.py  generators.py  strategies.py  test_calibrate.py  test_device.py  test_draw.py  test_drawing.py  test_easing.py  test_load_svg.py  test_renderer.py  test_shape_utils.py
tips_and_tricks/: index.html
